Fix issue 03905: display columns doesnt work Dev Removed padding from columns so they don't wrap in IE
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8024 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/default/template.css
+++ b/templates/default/template.css
@@ -439,7 +439,7 @@ table.question tr.array1:hover,table.question tr.array2:hover {
 , ul.cols-7 li , ul.cols-7-ul
 , ul.cols-8 li , ul.cols-8-ul {
     float: left;
-    padding: 0% 0.5em;
+    padding: 0;
     white-space: normal
 }
 
